# klipper_dash_visualizer

./: .babelrc  .editorconfig  .gitignore  CMakeLists.txt  DESCRIPTION  MANIFEST.in  NAMESPACE  README.md  _validate_init.py  index.html  package-lock.json  package.json  requirements.txt  setup.py  tsconfig.json  usage.py  webpack.config.js
R/: internal.R  klipperDashRenderer.R
klipper_dash_renderer/: KlipperDashRenderer.py  __init__.py  _imports_.py  klipper_dash_renderer.min.js  klipper_dash_renderer.min.js.map  metadata.json  package-info.json
klipper_dash_visualizer/: App.py  __init__.py  __main__.py  colormap.py  dash_app.py  data_generator.py  plots.py  ramer_douglas_peucker.py  standalone_visualizer.py
klipper_dash_visualizer/assets/: standalone.css
man/: klipperDashRenderer.Rd
src/demo/: App.js
src/lib/: d3fc.d.ts  extrusion_geometry.ts  global.d.ts  helpers.js  helpers.ts  index.js  index.ts  jest_setup.ts  linear_fixed_ticks_scale.test.ts  linear_fixed_ticks_scale.ts  turbo_colormap.ts
src/lib/components/: App.react.js  App.react.tsx  ExtrusionGeometry.ts  KlipperDashRenderer.react.js  KlipperDashRenderer.react.tsx  Tabs.react.tsx  app.react.tsx  klipper_dash_renderer.react.tsx  main_plot.tsx  plot.tsx  plot_theme.json  range_select.tsx  relative_slider.tsx  tabs.react.tsx  time_slider.test.tsx  time_slider.tsx
src/server/: cartesian.cpp  cartesian.hpp  config.h.in  config_parser.cpp  config_parser.hpp  kinematics.hpp  main.cpp  named_type.hpp  parser.cpp  parser.hpp  parser_error.hpp  pin_resolver.cpp  pin_resolver.hpp  stepper.cpp  stepper.hpp
(+13 files in other folders)
